@@ -265,8 +265,7 @@ Daisy::Daisy (Block& al)
 void
 Daisy::load_syntax (Syntax& syntax, AttributeList& alist)
 {
-  syntax.add ("description", Syntax::String, Syntax::OptionalConst,
-	      "Description of this simulation setup.");
+  Model::load_model (syntax, alist);
   alist.add ("description", default_description);
   
   Output::load_syntax (syntax, alist);
@@ -324,8 +323,7 @@ static struct ProgramDaisySyntax
     AttributeList& alist = *new AttributeList ();
     Daisy::load_syntax (syntax, alist);
     alist.add ("description", "A soil-crop-atmosphere simulation model.");
-    alist.add ("description_LaTeX", "A soil plant atmosphere system model \
-\\cite{daisy-def,daisy-new,daisy-fertilizer}.");
+    alist.add_strings ("cite", "daisy-def", "daisy-new", "daisy-fertilizer");
     Librarian::add_type (Program::component, "Daisy", alist, syntax, &make);
   }
 } ProgramDaisy_syntax;
